--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </div>
 
       <div class="section">
-        <div class="game-btn" onclick="location.href='#'">
+        <div class="game-btn" onclick="location.href='game.html'">
           🎮 갈매기 피하기 게임하러 가기
         </div>
         <p class="footer">
@@ -221,4 +221,3 @@
     </script>
   </body>
 </html>
-
