--- a/game.html
+++ b/game.html
@@ -241,9 +241,35 @@
       window.addEventListener('resize', () => {
         W = canvas.width = innerWidth;
         H = canvas.height = innerHeight;
+        // update player radius if you want responsive sizing
+        player.r = Math.max(
+          20,
+          Math.min(48, Math.round(Math.min(W, H) * 0.05))
+        );
       });
 
-      /* 플레이어 (임시 이미지로 원으로 표시) */
+      /* ===== 이미지 로드(프리로드) ===== */
+      const playerImg = new Image();
+      playerImg.src = '새우깡.png'; // 반드시 같은 폴더에 저장
+      const seagullImg = new Image();
+      seagullImg.src = '갈매기.png'; // 반드시 같은 폴더에 저장
+
+      let assetsToLoad = 2;
+      function assetLoaded() {
+        assetsToLoad--;
+        if (assetsToLoad <= 0) {
+          // 모두 로드되면 게임 시작
+          startGameLoop();
+        }
+      }
+      playerImg.onload = assetLoaded;
+      seagullImg.onload = assetLoaded;
+      // 안전: 이미지 로드 실패 시에도 게임 시작하도록 타임아웃
+      setTimeout(() => {
+        if (assetsToLoad > 0) startGameLoop();
+      }, 1500);
+
+      /* 플레이어 */
       const player = {
         x: W / 2,
         y: H * 0.75,
@@ -258,7 +284,7 @@
       /* 스폰 제어 */
       let spawnInterval = 1500; // 초기 스폰 간격 ms
       let spawnTimer = 0;
-      let spawnAcceleration = 0.985; // 시간이 흐를수록 간격이 줄어듦 (값<1이면 빠르게)
+      let spawnAcceleration = 0.985;
       const minSpawnInterval = 450;
 
       /* 게임 루프, 시간 측정 */
@@ -268,11 +294,6 @@
       let displayTimerEl = document.getElementById('hud');
       let lastFrame = performance.now();
 
-      /* 충돌 반지름 계산 */
-      function dist(a, b) {
-        return Math.hypot(a.x - b.x, a.y - b.y);
-      }
-
       /* 랜덤 헬퍼 */
       function rand(min, max) {
         return Math.random() * (max - min) + min;
@@ -280,10 +301,10 @@
 
       /* 갈매기 생성: 화면 바깥에서 랜덤 위치, 화면쪽으로 향하는 속도 */
       function spawnBird() {
-        // choose side: 0=top,1=right,2=bottom,3=left
         const side = Math.floor(Math.random() * 4);
         let x, y, vx, vy;
-        const speed = rand(0.09, 1.2) * (Math.min(W, H) / 800 + 0.6); // 느리지 않게, 화면크기 고려
+        // **갈매기 이동 속도(개별 속도)** — 5배 느리게 범위로 설정
+        const speed = rand(0.09, 0.24) * (Math.min(W, H) / 800 + 0.6);
         const size = Math.max(
           12,
           Math.min(
@@ -292,55 +313,43 @@
           )
         );
         if (side === 0) {
-          // top
           x = rand(-0.05 * W, 1.05 * W);
           y = -size * 2;
-          vx = rand(-0.5, 0.5);
+          vx = rand(-0.2, 0.2) + (W / 2 - x) * rand(0.005, 0.02);
           vy = speed;
         } else if (side === 1) {
-          // right
           x = W + size * 2;
           y = rand(-0.05 * H, 1.05 * H);
           vx = -speed;
-          vy = rand(-0.5, 0.5);
+          vy = rand(-0.2, 0.2) + (H / 2 - y) * rand(0.005, 0.02);
         } else if (side === 2) {
-          // bottom
           x = rand(-0.05 * W, 1.05 * W);
           y = H + size * 2;
-          vx = rand(-0.5, 0.5);
+          vx = rand(-0.2, 0.2) + (W / 2 - x) * rand(0.005, 0.02);
           vy = -speed;
         } else {
-          // left
           x = -size * 2;
           y = rand(-0.05 * H, 1.05 * H);
           vx = speed;
-          vy = rand(-0.5, 0.5);
+          vy = rand(-0.2, 0.2) + (H / 2 - y) * rand(0.005, 0.02);
         }
-        // direction tweak: aim a bit towards center also
-        const toCenterX = (W / 2 - x) * rand(0.02, 0.06);
-        const toCenterY = (H / 2 - y) * rand(0.02, 0.06);
-        vx += toCenterX;
-        vy += toCenterY;
 
-        birds.push({ x, y, vx, vy, r: size, angle: 0, img: null });
+        birds.push({ x, y, vx, vy, r: size, angle: 0, img: seagullImg });
       }
 
       /* 플레이어 이동 제어: 자이로 + 키보드 fallback */
-      let tilt = { x: 0, y: 0 }; // gamma (left-right) beta (front-back) mapped
+      let tilt = { x: 0, y: 0 };
       let useGyro = false;
 
       function handleOrientation(e) {
-        // gamma: left-right (-90 to 90), beta: front-back (-180 to 180)
         const g = e.gamma || 0;
         const b = e.beta || 0;
-        // map to -1..1
-        tilt.x = Math.max(-40, Math.min(40, g)) / 40; // left(-) right(+)
-        tilt.y = Math.max(-40, Math.min(40, b - 45)) / 40; // - further tilt forward gives +?
+        tilt.x = Math.max(-40, Math.min(40, g)) / 40;
+        tilt.y = Math.max(-40, Math.min(40, b - 45)) / 40;
         useGyro = true;
       }
       window.addEventListener('deviceorientation', handleOrientation, true);
 
-      /* 키보드 fallback */
       const keys = {};
       window.addEventListener('keydown', (e) => {
         keys[e.key.toLowerCase()] = true;
@@ -352,7 +361,6 @@
       /* 메인 업데이트/렌더 루프 */
       function update(dt) {
         if (!running) return;
-        // timer
         if (startTime === null) startTime = performance.now();
         elapsed = (performance.now() - startTime) / 1000;
 
@@ -370,10 +378,9 @@
         // update birds
         for (let i = birds.length - 1; i >= 0; i--) {
           const b = birds[i];
-          b.x += b.vx * dt * 0.06 * 60; // normalize to 60fps base
+          b.x += b.vx * dt * 0.06 * 60;
           b.y += b.vy * dt * 0.06 * 60;
           b.angle += 0.02;
-          // remove if far outside
           if (b.x < -b.r * 4 && b.vx < 0) birds.splice(i, 1);
           else if (b.x > W + b.r * 4 && b.vx > 0) birds.splice(i, 1);
           else if (b.y < -b.r * 4 && b.vy < 0) birds.splice(i, 1);
@@ -384,19 +391,18 @@
         let accelX = 0,
           accelY = 0;
         if (useGyro) {
-          // use tilt.x tilt.y; tilt range approx -1..1
-          const sensitivity = Math.min(W, H) / 35; // tuned
+          // **감도 5배 느리게**
+          const sensitivity = Math.min(W, H) / 35;
           accelX = tilt.x * sensitivity;
           accelY = tilt.y * sensitivity;
         } else {
-          // keyboard fallback: arrow keys or WASD
           const speed = Math.min(W, H) / 35;
           if (keys['arrowleft'] || keys['a']) accelX = -speed;
           if (keys['arrowright'] || keys['d']) accelX = speed;
           if (keys['arrowup'] || keys['w']) accelY = -speed;
           if (keys['arrowdown'] || keys['s']) accelY = speed;
         }
-        // smoothing velocity & clamp
+
         player.vx += (accelX - player.vx) * 0.12;
         player.vy += (accelY - player.vy) * 0.12;
         player.x += player.vx * dt * 0.06 * 60;
@@ -406,43 +412,55 @@
         player.x = Math.max(player.r, Math.min(W - player.r, player.x));
         player.y = Math.max(player.r, Math.min(H - player.r, player.y));
 
-        // collision detect (circle vs circle)
+        // collision detect
         for (const b of birds) {
           const d = Math.hypot(player.x - b.x, player.y - b.y);
           if (d < player.r + b.r * 0.8) {
-            // hit
             endGame();
             break;
           }
         }
 
-        // update HUD
         displayTimerEl.textContent = elapsed.toFixed(1) + 's';
       }
 
       function render() {
-        // clear
         ctx.clearRect(0, 0, W, H);
 
-        // draw birds
+        // draw birds (image or fallback)
         for (const b of birds) {
           ctx.save();
           ctx.translate(b.x, b.y);
           ctx.rotate(Math.sin(b.angle) * 0.15);
-          ctx.drawImage(seagullImg, -b.r, -b.r, b.r * 2, b.r * 2);
+          if (b.img && b.img.complete) {
+            ctx.drawImage(b.img, -b.r, -b.r, b.r * 2, b.r * 2);
+          } else {
+            // fallback circle
+            ctx.beginPath();
+            ctx.fillStyle = 'white';
+            ctx.arc(0, 0, b.r, 0, Math.PI * 2);
+            ctx.fill();
+          }
           ctx.restore();
         }
 
-        // draw player (placeholder circle with outline)
+        // draw player (image or fallback)
         ctx.save();
         ctx.translate(player.x, player.y);
-        ctx.drawImage(
-          playerImg,
-          -player.r,
-          -player.r,
-          player.r * 2,
-          player.r * 2
-        );
+        if (playerImg && playerImg.complete) {
+          ctx.drawImage(
+            playerImg,
+            -player.r,
+            -player.r,
+            player.r * 2,
+            player.r * 2
+          );
+        } else {
+          ctx.beginPath();
+          ctx.fillStyle = '#1e90ff';
+          ctx.arc(0, 0, player.r, 0, Math.PI * 2);
+          ctx.fill();
+        }
         ctx.restore();
       }
 
@@ -467,19 +485,15 @@
       function endGame() {
         running = false;
         finalTimeEl.textContent = elapsed.toFixed(1);
-        // show overlay darker
         overlay.style.background = 'rgba(0,0,0,0.5)';
         overlay.setAttribute('aria-hidden', 'false');
         modal.classList.add('show');
-        // show existing leaderboard
         populateLeaderboard();
-        // focus name input
         setTimeout(() => nameInput.focus(), 200);
       }
 
-      /* leaderboard in localStorage as array of {name, time} sorted desc by time */
+      /* leaderboard (unchanged) */
       const LS_KEY = 'seagull_leaderboard_v1';
-
       function readLB() {
         try {
           const raw = localStorage.getItem(LS_KEY);
@@ -495,7 +509,6 @@
       function addRecord(name, time) {
         const arr = readLB();
         arr.push({ name: name || '무명', time: Number(time) });
-        // sort descending by time (largest first)
         arr.sort((a, b) => b.time - a.time);
         saveLB(arr);
       }
@@ -526,27 +539,20 @@
         }
       }
 
-      /* 버튼 동작: 이름 입력 후 엔터로 저장 */
       nameInput.addEventListener('keydown', (e) => {
-        if (e.key === 'Enter') {
-          commitNameAndSave();
-        }
+        if (e.key === 'Enter') commitNameAndSave();
       });
       function commitNameAndSave() {
         const n = nameInput.value.trim() || '무명';
         addRecord(n, elapsed.toFixed(1));
         populateLeaderboard();
-        // keep modal shown so player can see leaderboard and choose restart/home
       }
 
-      /* 버튼 동작 */
       restartBtn.addEventListener('click', () => {
-        // clear modal
         modal.classList.remove('show');
         overlay.style.background = 'rgba(0,0,0,0)';
         overlay.setAttribute('aria-hidden', 'true');
         resetGame();
-        // start loop again
         running = true;
         startTime = null;
         spawnInterval = 1500;
@@ -555,11 +561,9 @@
         requestAnimationFrame(gameLoop);
       });
       homeBtn.addEventListener('click', () => {
-        // navigate home (index.html)
         location.href = 'index.html';
       });
 
-      /* reset game state */
       function resetGame() {
         birds.length = 0;
         player.x = W / 2;
@@ -570,7 +574,6 @@
       }
 
       /* ====== YouTube Players for sounds ====== */
-      /* we use iframe API so we can play/pause. Keep them hidden. */
       let waveYT, musicYT;
       function onYouTubeIframeAPIReady() {
         waveYT = new YT.Player('wavePlayer', {
@@ -594,15 +597,12 @@
           },
         });
       }
-      // load youtube api
       (function loadYT() {
         const s = document.createElement('script');
         s.src = 'https://www.youtube.com/iframe_api';
         document.head.appendChild(s);
       })();
 
-      /* 안전장치: 모바일에서 자동재생이 막힌 경우
-   사용자가 화면을 첫 터치하면 재생 허용시도 */
       let firstTouchHandler = function () {
         try {
           if (waveYT && waveYT.playVideo) waveYT.playVideo();
@@ -612,9 +612,17 @@
       };
       window.addEventListener('touchstart', firstTouchHandler, { once: true });
 
-      /* 시작 */
-      resetGame();
-      requestAnimationFrame(gameLoop);
+      /* ====== 시작: 이미지 로드 완료 후 게임 루프 시작 ====== */
+      function startGameLoop() {
+        // avoid double-start
+        if (typeof startGameLoop.started !== 'undefined') return;
+        startGameLoop.started = true;
+        resetGame();
+        lastFrame = performance.now();
+        requestAnimationFrame(gameLoop);
+      }
+
+      // 안전히 호출: (이미지는 onload에서 호출하거나 타임아웃이 지나면 호출)
     </script>
   </body>
 </html>
