--- a/game.html
+++ b/game.html
@@ -363,7 +363,7 @@
       ></iframe>
 
       <!-- 간단 안내 -->
-      <div id="hint">기울여서 이동하세요 — 데스크탑은 화살표/wasd 사용</div>
+      <div id="hint">기울여서 이동하세요!</div>
     </div>
 
     <script>
