--- a/index.html
+++ b/index.html
@@ -7,51 +7,40 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
 
-      /* 기본 레이아웃 */
+      /* 기본 */
       html,
       body {
         margin: 0;
         padding: 0;
         font-family: 'Gowun Dodum', sans-serif;
-        background: #f7f9fb;
-        color: #111;
-        overflow: auto; /* 스크롤 허용 (이미지 많으므로) */
+        background: transparent;
+        color: #000;
+        overflow: auto;
         -webkit-font-smoothing: antialiased;
       }
 
-      /* 기존 .background 대체 */
+      /* 배경 GIF (항상 보이게) */
       .background {
         position: fixed;
-        top: 0;
-        left: 0;
+        inset: 0;
         width: 100vw;
         height: 100vh;
         background: url('파도.gif') center/cover no-repeat fixed;
         z-index: -1;
-        /* 필터 없애서 원본 GIF 색감 유지 */
+        background-size: cover;
         filter: none;
         opacity: 1;
       }
 
-      /* 컨텐츠 배경을 투명으로 바꿔서 GIF가 보이도록 함 */
-      .container,
-      .page,
-      .container .section {
-        background: transparent !important;
-        box-shadow: none !important; /* 필요하면 유지 가능 */
-      }
-
-      /* 만약 .page에 흰 배경을 유지하되 반투명으로 하고 싶으면 아래처럼 (대신 투명도가 낮아짐)
-      .page {
-        background: rgba(255,255,255,0.4);
-      }
-      */
-
+      /* 페이지 래퍼 (투명) */
       .page {
         max-width: 980px;
         margin: 0 auto;
         padding: 4vh 4vw;
         box-sizing: border-box;
+        background: transparent;
+        position: relative;
+        z-index: 0;
       }
 
       header {
@@ -65,6 +54,7 @@
       h1 {
         margin: 0;
         font-size: 1.8rem;
+        color: #000;
       }
 
       /* 사운드 토글 (우측 상단) */
@@ -78,12 +68,14 @@
         align-items: center;
         gap: 8px;
         padding: 8px 10px;
-        background: rgba(255, 255, 255, 0.85);
         border-radius: 12px;
-        box-shadow: 0 6px 18px rgba(0, 0, 0, 0.06);
+        background: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(4px);
         cursor: pointer;
         user-select: none;
         font-size: 0.95rem;
+        color: #000;
+        box-shadow: 0 6px 18px rgba(0, 0, 0, 0.06);
       }
       .sound-btn img {
         width: 22px;
@@ -93,33 +85,30 @@
 
       /* 메인 컨텐츠 */
       .container {
-        background: rgba(255, 255, 255, 0.85);
-        border-radius: 14px;
         padding: 18px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+        background: transparent;
       }
 
-      /* 섹션 스타일 */
       .section {
         margin-top: 20px;
       }
       .section h2 {
         margin: 6px 0 12px 0;
         font-size: 1.15rem;
+        color: #000;
       }
-      .section p.note {
+      .note {
+        color: #333;
         margin: 0 0 12px 0;
-        color: #555;
-        font-size: 0.95rem;
       }
 
-      /* 이미지 카드 (전체/행) */
+      /* 이미지 카드 */
       .img-card {
-        background: #fff;
         border-radius: 12px;
         overflow: hidden;
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.04);
         margin-bottom: 12px;
+        background: rgba(255, 255, 255, 0);
+        box-shadow: 0 6px 18px rgba(0, 0, 0, 0.04);
       }
       .img-card img {
         display: block;
@@ -130,15 +119,13 @@
       .img-card figcaption {
         padding: 8px 12px;
         font-size: 0.92rem;
-        color: #444;
+        color: #111;
       }
 
-      /* 근처 카페: 지도(전체폭) */
       .cafe-map {
         margin-bottom: 14px;
       }
 
-      /* 카페 리스트: 가게 사진 + 메뉴판 (2컬럼, 모바일에선 1컬럼) */
       .cafe {
         margin-bottom: 18px;
       }
@@ -146,6 +133,7 @@
         margin: 6px 0 8px 0;
         font-size: 1rem;
         font-weight: 800;
+        color: #000;
       }
       .cafe-row {
         display: flex;
@@ -155,7 +143,7 @@
         flex: 1 1 calc(50% - 5px);
       }
 
-      /* 버튼 (게임으로 이동) */
+      /* 게임 버튼 */
       .game-btn {
         margin-top: 14px;
         display: inline-block;
@@ -168,10 +156,9 @@
         box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
       }
 
-      /* footer */
       .footer {
         margin-top: 18px;
-        color: #444;
+        color: #222;
         font-size: 0.95rem;
         line-height: 1.5;
       }
@@ -180,7 +167,6 @@
         font-weight: 800;
       }
 
-      /* 반응형: 모바일에서 이미지 세로 스택 */
       @media (max-width: 640px) {
         .page {
           padding: 3vh 4vw;
@@ -198,6 +184,7 @@
       }
     </style>
   </head>
+
   <body>
     <div class="background" aria-hidden="true"></div>
 
@@ -226,12 +213,11 @@
       </header>
 
       <main class="container" role="main">
-        <!-- 함덕해수욕장 섹션 -->
+        <!-- 함덕해수욕장 -->
         <section id="hamdeok" class="section" aria-labelledby="hamdeok-title">
           <h2 id="hamdeok-title">함덕해수욕장</h2>
           <p class="note">위치 지도와 해변 풍경 사진을 차례대로 확인하세요.</p>
 
-          <!-- 지도 사진 -->
           <figure class="img-card">
             <img
               src="함덕해수욕장%20위치사진.png"
@@ -240,7 +226,6 @@
             <figcaption>함덕해수욕장 위치</figcaption>
           </figure>
 
-          <!-- 풍경 사진 -->
           <figure class="img-card">
             <img
               src="함덕해수욕장%20풍경사진.png"
@@ -250,7 +235,7 @@
           </figure>
         </section>
 
-        <!-- 근처 카페 섹션 -->
+        <!-- 근처 카페 -->
         <section
           id="nearby-cafes"
           class="section"
@@ -261,7 +246,6 @@
             아래는 카페 위치와 각 카페의 가게 사진 및 메뉴판입니다.
           </p>
 
-          <!-- 카페 위치 사진 (전체폭) -->
           <figure class="img-card cafe-map">
             <img src="카페%20위치사진.png" alt="근처 카페 위치 사진" />
             <figcaption>카페 위치 (근거리)</figcaption>
@@ -327,7 +311,7 @@
       </main>
     </div>
 
-    <!-- 유튜브 영상 (파도소리 / 음악소리), 화면 숨김 상태로 두고 API로 제어 -->
+    <!-- 유튜브 사운드(숨김 iframe) -->
     <iframe
       id="waveMusic"
       width="0"
@@ -345,11 +329,11 @@
     ></iframe>
 
     <script>
-      // 유튜브 API 로드
-      let tag = document.createElement('script');
+      // YouTube API 로드
+      const tag = document.createElement('script');
       tag.src = 'https://www.youtube.com/iframe_api';
-      let firstScriptTag = document.getElementsByTagName('script')[0];
-      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+      const firstScript = document.getElementsByTagName('script')[0];
+      firstScript.parentNode.insertBefore(tag, firstScript);
 
       let wavePlayer, musicPlayer;
 
@@ -407,7 +391,7 @@
           : 'https://img.icons8.com/ios-filled/50/000000/mute.png';
       });
 
-      // 모바일 환경에서 autoplay가 막혔을 때를 대비한 안전장치:
+      // 모바일에서 autoplay 차단 대비: 첫 터치 시 재생 시도
       window.addEventListener(
         'touchstart',
         function oncePlay() {
